@@ -20,6 +20,7 @@
 	* Add implementation for show the option dialog with the menu
 	* Class cselect : can now get the selection of texts (not textarea or input)
 	* Fix an error in the popup system
+	* Class select : getSelection work !
 
 2007-03-03  Maximilien Cuony
 	* Implementation of firegpgGPG.listkey(private)
